Minor cleanup
PiperOrigin-RevId: 409252288